Fixed HTML script error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Welcome to Lesson 3</h1>
     <!-- JavaScript section -->
-        <script src="scripts/apps.js">   
+        <script src="scripts/apps.js">   </script>
   </body>
   
   </html>
